# SDL2

TestSDL/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
TestSDL/cmake/: FindSDL2.cmake  FindSDL2_image.cmake
